feat: add FrameAtomsTable component and integrate particle type display in metrics

--- a/client/src/components/organisms/DocumentListing/DocumentListing.css
+++ b/client/src/components/organisms/DocumentListing/DocumentListing.css
@@ -129,6 +129,7 @@
 
 .document-listing-cell{
     flex: 1;
+    color: #FFF;
     min-width: 120px;
     text-decoration: none;
     text-overflow: ellipsis;
