--- a/client/src/components/atoms/ProtectedRoute/ProtectedRoute.css
+++ b/client/src/components/atoms/ProtectedRoute/ProtectedRoute.css
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     z-index: 300;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: var(--glass-bg);
     backdrop-filter: blur(2px);
     transition: all 0.2s;
 }
