--- a/client/src/pages/protected/Canvas/Canvas.css
+++ b/client/src/pages/protected/Canvas/Canvas.css
@@ -48,6 +48,9 @@
     -webkit-mask: 
         linear-gradient(#000 0 0) content-box,
         linear-gradient(#000 0 0);
+    mask: 
+        linear-gradient(#000 0 0) content-box,
+        linear-gradient(#000 0 0);
     -webkit-mask-composite: xor;
     mask-composite: exclude;
     opacity: .7;
@@ -66,6 +69,9 @@
         rgba(255,255,255,0.08) calc(var(--p, 0) * 360deg)
     );
     -webkit-mask: 
+        linear-gradient(#000 0 0) content-box,
+        linear-gradient(#000 0 0);
+    mask: 
         linear-gradient(#000 0 0) content-box,
         linear-gradient(#000 0 0);
     -webkit-mask-composite: xor;
