--- a/client/src/components/organisms/FrameAtomsTable/FrameAtomsTable.css
+++ b/client/src/components/organisms/FrameAtomsTable/FrameAtomsTable.css
@@ -23,6 +23,6 @@
     width: 12px;
     height: 12px;
     border-radius: 2px;
-    border: 1px solid rgba(255,255,255,0.2);
+    border: 1px solid var(--color-border);
     display: inline-block;
 }
