feat: implement infinite scrolling for document listings and enhance data fetching logic

--- a/client/src/components/organisms/DocumentListing/DocumentListing.css
+++ b/client/src/components/organisms/DocumentListing/DocumentListing.css
@@ -107,8 +107,9 @@
     position: sticky;
     top: 0;
     z-index: 200000;
-    background-color: var(--color-surface-1);
+    background: var(--glass-bg);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 
 .document-listing-table-body-container{
