style: update background color variable in DocumentListing and set canvas dimensions in Canvas

--- a/client/src/pages/protected/Canvas/Canvas.css
+++ b/client/src/pages/protected/Canvas/Canvas.css
@@ -135,6 +135,11 @@
     user-select: none;
 }
 
+.editor-container canvas{
+    height: 100%;
+    width: 100%;
+}
+
 .editor-analyzing-container{
     position: absolute;
     backdrop-filter: blur(1px);
