fix: enhance caching headers for raster metadata and frames to ensure fresh data and include view counts in ETag

--- a/client/src/components/organisms/EditorSidebar/EditorSidebar.css
+++ b/client/src/components/organisms/EditorSidebar/EditorSidebar.css
@@ -79,6 +79,10 @@
     padding: 1.5rem;
 }
 
+.editor-sidebar-user-avatar-wrapper .sidebar-user-fullname{
+    color: #dadada;
+}
+
 .editor-sidebar-top-container > div:not(:last-child){
     border-bottom: 1px solid #212121;
 }
